--- a/memory/animals/index.html
+++ b/memory/animals/index.html
@@ -32,7 +32,7 @@
       "/memory/animals/images/rabbit.jpg",
       "/memory/animals/images/tiger.jpg",
     ],
-    "YXZvY2Fkbw==");
+    "VHJhdmVsVGltZSE=");
   });
   </script>
 </body>
