ransport emmory game

--- a/memory/transport/index.html
+++ b/memory/transport/index.html
@@ -18,20 +18,16 @@
   <script type="text/javascript">
   $(window).on('load', function() {
     game([
-      "/memory/animals/images/bird.jpg",
-      "/memory/animals/images/cat.jpg",
-      "/memory/animals/images/elephant.jpg",
-      "/memory/animals/images/dog.jpg",
-      "/memory/animals/images/fish.jpg",
-      "/memory/animals/images/giraffe.jpg",
-      "/memory/animals/images/lion.jpg",
-      "/memory/animals/images/horse.jpg",
-      "/memory/animals/images/pig.jpg",
-      "/memory/animals/images/mouse.jpg",
-      "/memory/animals/images/rabbit.jpg",
-      "/memory/animals/images/tiger.jpg",
+      "/memory/transport/images/airplane.jpg",
+      "/memory/transport/images/bike.jpg",
+      "/memory/transport/images/ferry.jpg",
+      "/memory/transport/images/helicopter.jpg",
+      "/memory/transport/images/motorcycle.jpg",
+      "/memory/transport/images/taxi.jpg",
+      "/memory/transport/images/van.jpg",
+      "/memory/transport/images/train.jpg",
     ],
-    "VHJhdmVsVGltZSE=");
+    "VGFrZSBvbmx5IG1lbW9yaWVzLCBsZWF2ZSBvbmx5IGZvb3RwcmludHMu");
   });
   </script>
 </body>
