--- a/memory/transport/index.html
+++ b/memory/transport/index.html
@@ -5,29 +5,31 @@
   <meta charset="utf-8">
   <title>Memory Game</title>
   <link href="/assets/css/MemoryGame.css" rel="stylesheet" type="text/css">
-  <script src="/assets/js/jquery.min.js" type="text/javascript"></script>
   <script src="/assets/js/MemoryGame.js" type="text/javascript"></script>
 </head>
 
 <body>
   <div id="gameBoard" class="container">
     <h3 id="gameTitle"></h3>
-    <p id="attemptsCounter"></p>
   </div>
 
   <script type="text/javascript">
   $(window).on('load', function() {
-    game([
-      "/memory/transport/images/airplane.jpg",
-      "/memory/transport/images/bike.jpg",
-      "/memory/transport/images/ferry.jpg",
-      "/memory/transport/images/helicopter.jpg",
-      "/memory/transport/images/motorcycle.jpg",
-      "/memory/transport/images/taxi.jpg",
-      "/memory/transport/images/van.jpg",
-      "/memory/transport/images/train.jpg",
-    ],
-    "VGFrZSBvbmx5IG1lbW9yaWVzLCBsZWF2ZSBvbmx5IGZvb3RwcmludHMu");
+    memory_game(
+      "gameBoard",
+      "gameTitle",
+      "VGFrZSBvbmx5IG1lbW9yaWVzLCBsZWF2ZSBvbmx5IGZvb3RwcmludHMu",
+      [
+        "/memory/transport/images/airplane.jpg",
+        "/memory/transport/images/bike.jpg",
+        "/memory/transport/images/ferry.jpg",
+        "/memory/transport/images/helicopter.jpg",
+        "/memory/transport/images/motorcycle.jpg",
+        "/memory/transport/images/taxi.jpg",
+        "/memory/transport/images/van.jpg",
+        "/memory/transport/images/train.jpg",
+      ],
+    );
   });
   </script>
 </body>
